Added sponsor grids

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
       {% include {{ section.info.file }} %}
     {% endif %}
   {% endfor %}
-
+<!--
   <section class="sponsors">
     <h1>Sponsors</h1>
 
@@ -39,48 +39,7 @@ layout: default
 
     </div>
 
-  </section>
-
-  <section class="tickets-section">
-    <div class="tickets">
-      <h1>Tickets</h1>
-      <p class="table-header">Day Pass*  (park only)</p>
-      <table>
-       <tr>
-         <td>$15 Early Bird</td>
-         <td>March 1 - April 1</td>
-       </tr>
-       <tr>
-         <td>$25 Pre Sale</td>
-         <td>Ends June 21</td>
-       </tr>
-       <tr>
-         <td>$35 Gate</td>
-         <td></td>
-       </tr>
-
-      </table>
-      <p><br>*Youth under 16 are FREE with an adult</p>
-
-      <br>
-      <br>
-      <br>
-
-      <p class="table-header">Weekend Pass (all venues)</p>
-
-      <table>
-       <tr>
-         <td>$30 Early Bird</td>
-         <td>March 1 - April 1</td>
-       </tr>
-       <tr>
-         <td>$50 Pre Sale</td>
-         <td>Ends June 21</td>
-       </tr>
-      </table>
-      <a class="get-tickets" rel="noopener noreferrer" target="_blank "href="https://www.ticketfly.com/purchase/event/1656918">Get Tickets</a>
-    </div>
-  </section>
+  </section> -->
 
   <section class="social">
     <div class="social-content">
